# gilbert-plugin-assetbundle

./: README.md  README.rst  setup.cfg
src/gilbert/plugins/: asset_bundle.py
