[flake8]
ignore =
        # Prefer line breaks before binary operators
        W503
max-line-length = 119
statistics = True

[metadata]
name = gilbert-plugin-assetbundle
version = 0.1.0
description = A plugin for Giblert to generate asset bundles.
logn_description = A plugin for Giblert to generate asset bundles.

[options]
zip_safe = False
packages = find_namespace:
package_dir =
    =src
install_requires =
    gilbert
    webassets

[options.packages.find]
where=src
